Setting z-index to 900, since dropdown-menu has a z-index of 1000 and dropdown-backdrop one of 990. Fixes #6

--- a/inst/assets/shinyhelper.css
+++ b/inst/assets/shinyhelper.css
@@ -9,7 +9,7 @@
   position: absolute;
   top: 0;
   right: 10px;
-  z-index: 1000;
+  z-index: 900;
   width: 0;
   height: 10px;
   padding: 0; 
